<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="@color/white">
    <ImageView
        android:layout_width="@dimen/start_width"
        android:layout_height="@dimen/start_height"
        android:src="@drawable/star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="320dp"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="47dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/welcome_size"
        android:layout_marginTop="145dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="172dp"/>
    <ImageView
        android:layout_width="@dimen/hello"
        android:layout_height="@dimen/hello"
        android:src="@drawable/hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="228dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="135dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="@dimen/email_width"
        android:layout_height="@dimen/email_height"
        android:hint="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="246dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxBackgroundColor = "#F1F3F4"
        app:boxCornerRadiusBottomEnd="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="@dimen/email_width"
        android:layout_height="@dimen/email_height"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="340dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxBackgroundColor = "#F1F3F4"
        app:boxCornerRadiusBottomEnd="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginStart="254dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Forget password?"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="20dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/Login"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Or with"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="@dimen/divider_width"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="600dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="241dp"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="@dimen/divider_width"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="600dp"
        android:layout_marginStart="241dp"
        android:layout_marginEnd="20dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/fb_btn"
        android:layout_width="@dimen/fb_btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="20dp"
        android:layout_marginTop="640dp"
        android:layout_marginEnd="203dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/facebook"
        app:cornerRadius="10dp"
        app:icon="@drawable/fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/gg_btn"
        android:layout_width="@dimen/fb_btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="203dp"
        android:layout_marginTop="640dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/google"
        app:cornerRadius="10dp"
        app:icon="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don’t have an account?"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/fb_btn"
        app:layout_constraintStart_toStartOf="@id/fb_btn"
        app:layout_constraintEnd_toEndOf="@id/fb_btn"
        android:layout_marginTop="76dp"
        android:layout_marginStart="100dp"
   />
    <TextView
        android:textAlignment="textStart"
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textStyle="bold"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/gg_btn"
        app:layout_constraintStart_toStartOf="@id/gg_btn"
        app:layout_constraintEnd_toEndOf="@id/gg_btn"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="76dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>